# learn-c

./: .gitignore  CMakeLists.txt
learn_c_the_hard_way/: Makefile  dbg.h  ex1.c  ex10.c  ex11.c  ex12.c  ex13.c  ex14.c  ex15.c  ex16.c  ex17.c  ex17_stack.c  ex18.c  ex20.c  ex22.c  ex22.h  ex22_main.c  ex23.c  ex24.c  ex25.c  ex3.c  ex31.c  ex6.c  ex7.c  ex8.c  ex9.c  run-ex10.kts
learn_c_the_hard_way/c-skeleton/: Makefile
learn_c_the_hard_way/c-skeleton/tests/: runtests.sh
learn_c_the_hard_way/ex19/: ex19.c  object.c
learn_c_the_hard_way/ex26/: Makefile  commands.c  commands.h  db.c  db.h  devpkg.c  install.sh  shell.c  shell.h
learn_c_the_hard_way/ex29/: Makefile  make_ex29.sh
learn_c_the_hard_way/ex29/src/: libex29.c
learn_c_the_hard_way/ex29/tests/: ex29_tests  ex29_tests.c  minunit.h
learn_c_the_hard_way/liblcthw/: Makefile
learn_c_the_hard_way/liblcthw/tests/: darray_algos_tests.c  darray_test.c  hashmap_tests.c  list_algos_tests.c  list_tests.c  minunit.h  radixmap_tests.c
the_c_programming_language/: CMakeLists.txt
the_c_programming_language/chapter-1/: chars_freq.c  copy_and_filter_lines.c  copy_chars.c  count_chars.c  detab.c  hello_world.c  lines.c  lines_longer_than_40.c  longest_line.c  remove_blank_lines.c  reverse.c  temp_table_cf.c  temp_table_fc.c  word_lengths_freq.c  word_per_line.c
the_c_programming_language/chapter-2/: dt_ranges.c
the_c_programming_language/chapter-3/: binary_search.c
the_c_programming_language/chapter-4/: strrindex.c
the_c_programming_language/lib/: strings.c  strings.h
(+11 files in other folders)
